--- a/Loja/src/main/webapp/index.html
+++ b/Loja/src/main/webapp/index.html
@@ -3,12 +3,24 @@
 <head>
 <meta charset="utf-8">
 <title>Loja - Home</title>
+<link rel="icon" href="imagens/favicon.png">
+<link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
-	<h1>Pagina Home</h1>
-	<a href="create">Cadastrar</a>
-	<p>
-	<a href="read">Produtos</a>
-	<p>
+	<nav id="navbar-example2" class="navbar bg-light px-3">
+		<a class="navbar-brand"><img src="imagens/2-home-11.png"> LOJA</a>
+		<ul class="nav nav-pills">
+		  <li class="nav-item">
+			<a class="nav-link" href="create"><img src="imagens/8-note.png"alt="lista"> Cadastrar</a>
+		  </li>
+		  <div class="vr"></div>
+		  <li class="nav-item">
+			<a class="nav-link" href="read"><img src="imagens/25-trolly.png"alt="carrinho de loja">  Produtos</a>
+		  </li>
+		</ul>
+	  </nav>
+	<h1 class="text-center">Loja</h1>
+
+	<script src="scripts/bootstrap.bundle.min.js"></script>
 </body>
 </html>
