--- a/Loja/src/main/webapp/index.html
+++ b/Loja/src/main/webapp/index.html
@@ -7,19 +7,22 @@
 <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
-	<nav id="navbar-example2" class="navbar bg-light px-3">
-		<a class="navbar-brand"><img src="imagens/2-home-11.png"> LOJA</a>
+	<nav id="navbar-example2" class="navbar bg-light px-3 "
+		style="color: inherit">
+		<a class="navbar-brand"><img src="imagens/2-home-11.png">
+			LOJA</a>
 		<ul class="nav nav-pills">
-		  <li class="nav-item">
-			<a class="nav-link" href="create"><img src="imagens/8-note.png"alt="lista"> Cadastrar</a>
-		  </li>
-		  <div class="vr"></div>
-		  <li class="nav-item">
-			<a class="nav-link" href="read"><img src="imagens/25-trolly.png"alt="carrinho de loja">  Produtos</a>
-		  </li>
+			<li class="nav-item"><a style="color: inherit" class="nav-link"
+				href="create"><img src="imagens/8-note.png" alt="lista">
+					Cadastrar</a></li>
+			<div class="vr"></div>
+			<li class="nav-item"><a style="color: inherit" class="nav-link"
+				href="read"><img src="imagens/25-trolly.png"
+					alt="carrinho de loja"> Produtos</a></li>
 		</ul>
-	  </nav>
+	</nav>
 	<h1 class="text-center">Loja</h1>
+	<img src="imagens/Group2.png" class="rounded mx-auto d-block" alt="...">
 
 	<script src="scripts/bootstrap.bundle.min.js"></script>
 </body>
